fix(game003): grid clipping

--- a/game003/src/style.css
+++ b/game003/src/style.css
@@ -43,7 +43,8 @@ body {
   gap: var(--gap);
   margin-inline: auto;
   filter: drop-shadow(0 0 var(--shadow-spread) var(--color));
-  clip-path: polygon(0 20%, 40% 0, 60% 0, 100% 20%, 100% 80%, 60% 100%, 40% 100%, 0 80%);
+  /* clip-path: polygon(0 20%, 40% 0, 60% 0, 100% 20%, 100% 80%, 60% 100%, 40% 100%, 0 80%); */
+  clip-path: ellipse(55% 50% at 50% 50%);
 
   &.over {
     --color: crimson;
